2004-05-04  Angus Leeming  <leeming@lyx.org>

	* XWorkArea.C (XWorkArea): revert the red color of the frame widget.
	Instead, set it to LColor::background.

2004-05-04  Angus Leeming  <leeming@lyx.org>

	* XFormsToolbar.C (show, hide): do nothing if the toolbar is
	already visible/invisible, respectively.

2004-05-04  Angus Leeming  <leeming@lyx.org>

	* XWorkArea.C (XWorkArea): set the color of the background, hidden
	frame object to red as an incentive to address the drawing issues
	of the XForms frontend.

2004-05-03  Angus Leeming  <leeming@lyx.org>

	* XFormsToolbar.[Ch] (generateInactivePixmaps): simpler mechanics.

2004-05-02  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* FormGraphics.C: #include <cmath> (STLport compile fix for floor())

2004-04-30  Angus Leeming  <leeming@lyx.org>

	* XFormsToolbar.[Ch]: add code to generate an 'inactive' version
	of the icon pixmap and use it when the toolbar button is
	disabled.

2004-04-29  Angus Leeming  <leeming@lyx.org>

	* FormGraphics.C (apply): don't get caught in a loop when mapping
	the angle into -360 -> 360 degrees.

2004-04-28  Angus Leeming  <leeming@lyx.org>

	* LayoutEngine.C (updateMetrics): respect the visible() flag when
	positioning the widgets.

	* XFormsToolbar.[Ch]: rewrite code to derive from a single Toolbar or
	LayoutBox. Leads to multiple, dynamically visible toolbars in the
	xforms frontend.

	* XFormsView.[Ch]: small changes due to changed Toolbar API.

2004-04-28  Angus Leeming  <leeming@lyx.org>

	* LayoutEngine.[Ch]: a layout engine for xforms, drawing heavily
	on GTK+ code for inspiration.

	* Makefile.am: add new files.

	* WorkAreaFactory.C (create): no longer pass x,y data to XWorkArea.

	* XFormsMenubar.[Ch]:
	* XFormsToolbar.[Ch]:
	* XFormsView.[Ch]:
	* XMiniBuffer.[Ch]:
	* XWorkArea.[Ch]: adjustments to use the new layout engine.

2004-04-28  Angus Leeming  <leeming@lyx.org>

	* WorkAreaFactory.C (create): pass a LyXView & to QWorkArea c-tor.
